# TheWatch

TheWatch/: monitor.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
TheWatch/core/: __init__.py  api.py  config.py  models.py  scraper.py
TheWatch/data/: __init__.py  exporters.py  processors.py
TheWatch/docs/: README.md
TheWatch/scripts/: monitor.py
TheWatch/tests/: test_exporters.py  test_models.py  test_scraper.py
TheWatch/ui/: __init__.py  cli.py  display.py  formatters.py
TheWatch/utils/: __init__.py  helpers.py  logger.py
TheWatch/web/: app.py  routes.py
