[metadata]
version = 0.1.0
description = A web scraping tool for monitoring Grailed sales
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.8

[options.extras_require]
dev =
    pytest>=7.4.3
    pytest-asyncio>=0.21.1
    pytest-cov>=4.1.0
    black>=23.11.0
    isort>=5.12.0
    flake8>=6.1.0
    mypy>=1.7.1

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,__pycache__,build,dist,*.egg-info

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*
asyncio_mode = auto

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
check_untyped_defs = True
